--- a/app/src/main/res/layout/activity_registration.xml
+++ b/app/src/main/res/layout/activity_registration.xml
@@ -13,11 +13,11 @@
         android:layout_height="wrap_content"
         android:text="@string/register"
         android:textAlignment="center"
-        android:textSize="50sp"
+        android:textSize="40sp"
         android:layout_marginStart="25dp"
         android:layout_marginBottom="5dp"
         android:fontFamily="@font/indigo_daisy"
-        android:layout_marginTop="60dp"/>
+        android:layout_marginTop="20dp"/>
 
     <TextView
         android:id="@+id/tv_subtitle"
@@ -27,7 +27,7 @@
         android:textSize="17sp"
         android:fontFamily="@font/roboto_regular"
         android:layout_marginStart="25dp"
-        android:layout_marginBottom="50dp"/>
+        android:layout_marginBottom="30dp"/>
 
     <EditText
         android:id="@+id/fieldFirstName"
@@ -77,6 +77,7 @@
         android:hint="@string/bio"
         android:layout_marginLeft="20dp"
         android:layout_marginRight="20dp"
+        android:layout_marginBottom="10dp"
         android:padding="15dp"
         android:fontFamily="@font/roboto_regular"
         android:background="@drawable/et_custom"
@@ -89,6 +90,7 @@
         android:hint="@string/interests"
         android:layout_marginLeft="20dp"
         android:layout_marginRight="20dp"
+        android:layout_marginBottom="10dp"
         android:padding="15dp"
         android:fontFamily="@font/roboto_regular"
         android:background="@drawable/et_custom"
@@ -103,15 +105,15 @@
             android:id="@+id/profileImageText"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="                                    "
+            android:text="                               "
             android:textAlignment="center"
             android:layout_centerVertical="true"
             android:textSize="15sp"
             android:layout_marginStart="25dp"
             android:layout_marginBottom="5dp"
-            android:fontFamily="@font/indigo_daisy"
+            android:fontFamily="@font/roboto_regular"
             android:layout_alignParentLeft="true"
-            android:layout_marginTop="60dp"/>
+            android:layout_marginTop="20dp"/>
 
         <Button
             android:id="@+id/addImageButton"
