--- a/app/src/main/res/layout/activity_profile.xml
+++ b/app/src/main/res/layout/activity_profile.xml
@@ -14,56 +14,165 @@
         android:layout_marginStart="25dp"
         android:layout_marginBottom="15dp"
         android:contentDescription="man"/>
+    <ScrollView
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:orientation="vertical">
 
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
     <TextView
-        android:id="@+id/text1"
+        android:id="@+id/text_aa"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text=""
+        android:text="First Name: "
         android:textAlignment="center"
-        android:textSize="20sp"
-        android:layout_marginStart="25dp"
+        android:textSize="15sp"
+        android:layout_marginStart="10dp"
         android:layout_marginBottom="15dp"
         android:fontFamily="@font/roboto_regular"
-        android:layout_marginTop="60dp"/>
+        android:layout_marginTop="30dp"/>
 
-    <TextView
-        android:id="@+id/text2"
-        android:layout_width="wrap_content"
+    <EditText
+        android:id="@+id/textFN"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text=""
+        android:hint="Enter First Name"
+        android:textAlignment="center"
         android:textSize="20sp"
+        android:layout_marginStart="10dp"
+        android:layout_marginBottom="15dp"
         android:fontFamily="@font/roboto_regular"
-        android:layout_marginStart="25dp"
-        android:layout_marginBottom="15dp"/>
-
-    <TextView
-        android:id="@+id/text3"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text=""
-        android:textSize="20sp"
-        android:fontFamily="@font/roboto_regular"
-        android:layout_marginStart="25dp"
-        android:layout_marginBottom="15dp"/>
-    <TextView
-        android:id="@+id/text4"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text = ""
-        android:textSize="20sp"
-        android:fontFamily="@font/roboto_regular"
-        android:layout_marginStart="25dp"
-        android:layout_marginBottom="15dp"/>
-    <TextView
-        android:id="@+id/text5"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text=""
-        android:textSize="20sp"
-        android:fontFamily="@font/roboto_regular"
-        android:layout_marginStart="25dp"
-        android:layout_marginBottom="15dp"/>
+        android:layout_marginTop="30dp"/>
+    </LinearLayout>
 
 
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
+        <TextView
+            android:id="@+id/text_bb"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Last Name: "
+            android:textAlignment="center"
+            android:textSize="15sp"
+            android:layout_marginStart="10dp"
+            android:layout_marginBottom="15dp"
+            android:fontFamily="@font/roboto_regular"
+            android:layout_marginTop="30dp"/>
+
+        <EditText
+            android:id="@+id/textLN"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:hint="Enter Last name"
+            android:textAlignment="center"
+            android:textSize="20sp"
+            android:layout_marginStart="10dp"
+            android:layout_marginBottom="15dp"
+            android:fontFamily="@font/roboto_regular"
+            android:layout_marginTop="30dp"/>
+    </LinearLayout>
+
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
+        <TextView
+            android:id="@+id/text_cc"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Age"
+            android:textAlignment="center"
+            android:textSize="15sp"
+            android:layout_marginStart="10dp"
+            android:layout_marginBottom="15dp"
+            android:fontFamily="@font/roboto_regular"
+            android:layout_marginTop="30dp"/>
+
+        <EditText
+            android:id="@+id/textAge"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:hint="Enter Your Age"
+            android:textAlignment="center"
+            android:textSize="20sp"
+            android:layout_marginStart="10dp"
+            android:layout_marginBottom="15dp"
+            android:fontFamily="@font/roboto_regular"
+            android:layout_marginTop="30dp"/>
+    </LinearLayout>
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
+        <TextView
+            android:id="@+id/text_dd"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Hobbies: "
+            android:textAlignment="center"
+            android:textSize="15sp"
+            android:layout_marginStart="10dp"
+            android:layout_marginBottom="15dp"
+            android:fontFamily="@font/roboto_regular"
+            android:layout_marginTop="30dp"/>
+
+        <EditText
+            android:id="@+id/textHB"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:hint="Your Hobbies"
+            android:textAlignment="center"
+            android:textSize="20sp"
+            android:layout_marginStart="10dp"
+            android:layout_marginBottom="15dp"
+            android:fontFamily="@font/roboto_regular"
+            android:layout_marginTop="30dp"/>
+    </LinearLayout>
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
+        <TextView
+            android:id="@+id/text_ee"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Interests: "
+            android:textAlignment="center"
+            android:textSize="15sp"
+            android:layout_marginStart="10dp"
+            android:layout_marginBottom="15dp"
+            android:fontFamily="@font/roboto_regular"
+            android:layout_marginTop="30dp"/>
+
+        <EditText
+            android:id="@+id/textIN"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:hint="About Yourself"
+            android:textAlignment="center"
+            android:textSize="20sp"
+            android:layout_marginStart="10dp"
+            android:layout_marginBottom="15dp"
+            android:fontFamily="@font/roboto_regular"
+            android:layout_marginTop="30dp"/>
+    </LinearLayout>
+
+    <Button
+        android:id="@+id/buttonUpdate"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center"
+        android:layout_marginTop = "25dp"
+        android:layout_marginHorizontal="80dp"
+        android:text="Update Information"
+    />
+        </LinearLayout>t
+    </ScrollView>
 </LinearLayout>
